cdk.out/RtspKvsStack.template.json
{
 "Resources": {
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "KVS Cloud Gateway VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/Resource"
   }
  },
  "VPCApplicationSubnet1SubnetCE118F80": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Application"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet1/Subnet"
   }
  },
  "VPCApplicationSubnet1RouteTable5B6CE71A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet1/RouteTable"
   }
  },
  "VPCApplicationSubnet1RouteTableAssociation8DF0EAE5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet1RouteTable5B6CE71A"
    },
    "SubnetId": {
     "Ref": "VPCApplicationSubnet1SubnetCE118F80"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet1/RouteTableAssociation"
   }
  },
  "VPCApplicationSubnet1DefaultRouteA4E47D36": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet1RouteTable5B6CE71A"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet1/DefaultRoute"
   }
  },
  "VPCApplicationSubnet2Subnet988E96B1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Application"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet2/Subnet"
   }
  },
  "VPCApplicationSubnet2RouteTableFDC3EEE6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet2/RouteTable"
   }
  },
  "VPCApplicationSubnet2RouteTableAssociationD84040F3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet2RouteTableFDC3EEE6"
    },
    "SubnetId": {
     "Ref": "VPCApplicationSubnet2Subnet988E96B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet2/RouteTableAssociation"
   }
  },
  "VPCApplicationSubnet2DefaultRouteC3680A52": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet2RouteTableFDC3EEE6"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet2/DefaultRoute"
   }
  },
  "VPCApplicationSubnet3Subnet152008D5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Application"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet3/Subnet"
   }
  },
  "VPCApplicationSubnet3RouteTable29639657": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RtspKvsStack/VPC/ApplicationSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet3/RouteTable"
   }
  },
  "VPCApplicationSubnet3RouteTableAssociationB4462F03": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet3RouteTable29639657"
    },
    "SubnetId": {
     "Ref": "VPCApplicationSubnet3Subnet152008D5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet3/RouteTableAssociation"
   }
  },
  "VPCApplicationSubnet3DefaultRoute33D8EB24": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCApplicationSubnet3RouteTable29639657"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/ApplicationSubnet3/DefaultRoute"
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "KVS Cloud Gateway VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/IGW"
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/VPCGW"
   }
  },
  "VPCRestrictDefaultSecurityGroupCustomResource59474679": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "VPCB9E5F0B4",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "091664994886"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/VPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:091664994886:security-group/",
             {
              "Fn::GetAtt": [
               "VPCB9E5F0B4",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-091664994886-us-east-1",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "SecurityGroupDD263621": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow SSH (TCP port 22) in",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "70.175.157.61/32",
      "Description": "Allow SSH Access",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/SecurityGroup/Resource"
   }
  },
  "ec2Role38AB65C0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ],
    "RoleName": "kvsCloudGatewayInstanceRole"
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/ec2Role/Resource"
   }
  },
  "ec2RoleDefaultPolicyC400AE24": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "kinesisvideo:DescribeStream",
        "kinesisvideo:GetDataEndpoint",
        "kinesisvideo:PutMedia",
        "kinesisvideo:TagStream"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "KvsStreamacmemainentrance",
          "Arn"
         ]
        },
        {
         "Fn::GetAtt": [
          "KvsStreamacmeparkinglot",
          "Arn"
         ]
        }
       ]
      },
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        "arn:aws:s3:::cdk-hnb659fds-assets-091664994886-us-east-1",
        "arn:aws:s3:::cdk-hnb659fds-assets-091664994886-us-east-1/*"
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ec2RoleDefaultPolicyC400AE24",
    "Roles": [
     {
      "Ref": "ec2Role38AB65C0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/ec2Role/DefaultPolicy/Resource"
   }
  },
  "KvsStreamacmemainentrance": {
   "Type": "AWS::KinesisVideo::Stream",
   "Properties": {
    "DataRetentionInHours": 24,
    "MediaType": "video/h264",
    "Name": "acme-main-entrance"
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/KvsStream-acme-main-entrance"
   }
  },
  "KvsStreamacmeparkinglot": {
   "Type": "AWS::KinesisVideo::Stream",
   "Properties": {
    "DataRetentionInHours": 24,
    "MediaType": "video/h264",
    "Name": "acme-parking-lot"
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/KvsStream-acme-parking-lot"
   }
  },
  "InstanceInstanceProfileAB5AEF02": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "ec2Role38AB65C0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/Instance/InstanceProfile"
   }
  },
  "InstanceC1063A87": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/sda1",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "VolumeSize": 50
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "InstanceInstanceProfileAB5AEF02"
    },
    "ImageId": "ami-0d192a81a9bee8a6e",
    "InstanceType": "t3.small",
    "KeyName": "cdk-keypair",
    "PropagateTagsToVolumeOnCreation": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SecurityGroupDD263621",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "VPCApplicationSubnet1SubnetCE118F80"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "kvs-rtsp-cloud-gateway"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo apt update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata\nsudo apt install unzip -y\ncurl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\" &&       unzip awscliv2.zip &&       sudo ./aws/install &&       rm awscliv2.zip\nsudo apt-get install -y       libssl-dev       git       libcurl4-openssl-dev       liblog4cplus-dev       libgstreamer1.0-dev       libgstreamer-plugins-base1.0-dev       [...]
    }
   },
   "DependsOn": [
    "ec2RoleDefaultPolicyC400AE24",
    "ec2Role38AB65C0"
   ],
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/Instance/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOMW/CQAyFfwv7caVhoSMwICaipGJFzmGoSeJDZx8IRfnv1QXaqEOn9/z85M+ZXSzsbAJ3mbpjPW2osl2p4GoDdzl06DLb7a/OrE+8z9cmj1VDrowVo6ZsdIWPip9QNTjmY7YU8Y5AyfNvOZktKwZG3YDiHR4vzGtaqoL7apHVlOhiIH1sgo/XAfAn2LIosHudfPreELS2K/zzo0Fz35AbKKP76efBn6jB3tTEKCQ3OqK3CaUBoTUyP4AIqthlEiNzu4quRl2BYG8KFB9DeiGK+nYcT/zPKg8+MYIZ7pUKZ+Jz6u+iXqP2hv0R7UXebtnMvn/Y2eQiRNMQWalFWzz1G2ITL2PBAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "RtspKvsStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "IPAddress": {
   "Value": {
    "Fn::GetAtt": [
     "InstanceC1063A87",
     "PublicIp"
    ]
   }
  },
  "KeyName": {
   "Value": "cdk-keypair"
  },
  "DownloadKeyCommand": {
   "Value": "aws secretsmanager get-secret-value --secret-id ec2-ssh-key/cdk-keypair/private --query SecretString --output text > cdk-key.pem && chmod 400 cdk-key.pem"
  },
  "sshcommand": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "ssh -i cdk-key.pem -o IdentitiesOnly=yes ec2-user@",
      {
       "Fn::GetAtt": [
        "InstanceC1063A87",
        "PublicIp"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
